# PorkchopLite

./: CMakeLists.txt  README.md  assembler.hpp  common.hpp  compiler.cpp  compiler.hpp  global.cpp  global.hpp  init.sh  lexer.cpp  lexer.hpp  local.cpp  local.hpp  main.cpp  parser.cpp  parser.hpp  pcmake.sh  source.cpp  source.hpp  token.hpp  tree.cpp  tree.hpp  type.hpp  util.hpp
lib/: lib.c  stdlib.pc
test/: cast.pc  cast.pc.ll  sort.pc  sort.pc.ll  sum.pc  sum.pc.ll  test.sh
